# TR5_UpperBody

install/: local_setup.sh  setup.sh
install/dex_hand/lib/dex_hand/: rps  rps_cam  rps_hand  trigger
install/dex_hand/share/dex_hand/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/upper_body_demo/include/upper_body_demo/ecat/: task.hpp
install/upper_body_demo/lib/: libethercat-cpp.so.4.1.1
install/upper_body_demo/lib/upper_body_demo/: enable  teleop  wave_hand_demo
install/upper_body_demo/share/ament_index/resource_index/package_run_dependencies/: upper_body_demo
install/upper_body_demo/share/ament_index/resource_index/parent_prefix_path/: upper_body_demo
install/upper_body_demo/share/upper_body_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/upper_body_demo/share/upper_body_demo/cmake/: upper_body_demoConfig-version.cmake  upper_body_demoConfig.cmake
install/upper_body_demo/share/upper_body_demo/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/dex_hand/: setup.cfg  setup.py
src/dex_hand/dex_hand/: revo2_utils.py  trigger.py
src/install/: local_setup.sh  setup.sh
src/install/dex_hand/share/dex_hand/: package.dsv  package.ps1  package.sh  package.xml
src/install/upper_body_demo/lib/upper_body_demo/: enable  wave_hand_demo
src/install/upper_body_demo/share/ament_index/resource_index/package_run_dependencies/: upper_body_demo
src/install/upper_body_demo/share/upper_body_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh
src/log/: latest_build
src/upper_body_demo/: CMakeLists.txt
src/upper_body_demo/include/ecat/: types.hpp
src/upper_body_demo/lib/cmake/ethercat-cpp/: ethercat-cpp-targets-relwithdebinfo.cmake
src/upper_body_demo/src/: CtrlContext.hpp  IController.hpp  axis.hpp  power.cpp  power.hpp  udp_tool.cpp  udp_tool.hpp  wrist_IK_FK.cpp  wrist_IK_FK.hpp
src/upper_body_demo/src/enable/: main.cpp
src/upper_body_demo/src/teleop/: Joint.hpp  armPosiSender.cpp  armPosiSender.hpp  main.cpp
src/upper_body_demo/src/wavehand/: Joint.hpp  WaveHandDemo.cpp  WaveHandDemo.hpp  main.cpp
